--- a/.env
+++ b/.env
@@ -18,3 +18,33 @@
 APP_ENV=dev
 APP_SECRET=d9e5e56c6856cf4d537beedb436a2d42
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL=mysql://root:@127.0.0.1:3306/commpeak
+###< doctrine/doctrine-bundle ###
+
+IPGEOLOCATION_KEY=7f359f8de20748a4b70adfabd769a34d
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
+
+###> pusher/pusher-php-server ###
+PUSHER_APP_ID=1722277
+PUSHER_KEY=5fe6a1fe4a95597c150c
+PUSHER_SECRET=ad45e05daf9cbd734977
+PUSHER_CLUSTER=ap1
+###< pusher/pusher-php-server ###
