--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,15 @@
 controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+  resource:
+    path: ../src/Controller/
+    namespace: App\Controller
+  type: attribute
+
+upload_csv:
+  path: /upload
+  controller: App\Controller\UploadController::upload
+  methods: [POST]
+
+statistic_list:
+  path: /list
+  controller: App\Controller\UploadController::getList
+  methods: [GET]
