--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,19 +6,34 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: "../src/"
+    exclude:
+      - "../src/DependencyInjection/"
+      - "../src/Entity/"
+      - "../src/Kernel.php"
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+  App\MessageHandler\CsvBatchInsertHandler:
+    tags: ["messenger.message_handler"]
+
+  Pusher\Pusher:
+    arguments:
+      $auth_key: "%env(PUSHER_KEY)%"
+      $secret: "%env(PUSHER_SECRET)%"
+      $app_id: "%env(PUSHER_APP_ID)%"
+      $options:
+        cluster: "%env(PUSHER_CLUSTER)%"
+        useTLS: true
+  App\EventListener\ApiKeyCheckListener:
+    tags:
+      - { name: kernel.event_listener, event: kernel.request }
+
+  # add more service definitions when explicit configuration is needed
+  # please note that last definitions always *replace* previous ones
