--- a/.env
+++ b/.env
@@ -27,7 +27,8 @@ APP_SECRET=d9e5e56c6856cf4d537beedb436a2d42
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
-DATABASE_URL=mysql://root:@127.0.0.1:3306/commpeak
+# DATABASE_URL=mysql://root:@127.0.0.1:3306/commpeak
+DATABASE_URL=mysql://commpeak:commpeak@mysql:3306/commpeak
 ###< doctrine/doctrine-bundle ###
 
 IPGEOLOCATION_KEY=7f359f8de20748a4b70adfabd769a34d
